tests/baselines/reference/enumConflictsWithGlobalIdentifier.errors.txt
==== tests/cases/compiler/enumConflictsWithGlobalIdentifier.ts (2 errors) ====
    enum Position { 
        IgnoreRulesSpecific = 0,
    }
    var x = IgnoreRulesSpecific.
            ~~~~~~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'IgnoreRulesSpecific'.
    var y = Position.IgnoreRulesSpecific;
        ~
!!! error TS1005: ',' expected.
    